--- a/stream-three.html
+++ b/stream-three.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="stream-one.html"></a>Stream One</li>
+            <li><a href="index.html"></a>Stream One</li>
             <li><a href="stream-two.html"></a>Stream Two</li>
             <li><a href="stream-three.html"></a>Stream Three</li>
         </ul>
